k8s/auth-mongo-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: auth-mongo
  ports:
    - name: auth-mongo
      port: 27017
      targetPort: 27017
      protocol: TCP
