k8s/auth-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - name: auth-srv
      port: 3000
      targetPort: 3000
      protocol: TCP
