k8s/orders-mongo-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-mongo-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: orders-mongo
  ports:
    - name: orders-mongo-srv
      port: 27017
      targetPort: 27017
      protocol: TCP
