k8s/tickets-mongo-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: mongo-tickets
  ports:
    - name: tickets-mongo
      port: 27017
      targetPort: 27017
      protocol: TCP
