k8s/tickets-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: tickets-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: tickets
  ports:
    - name: tickets-srv
      port: 3000
      targetPort: 3000
      protocol: TCP
